Taking Screenshoot In Any Page Of Browser

--- a/CSS/Taking Screenshoots.css
+++ b/CSS/Taking Screenshoots.css
@@ -4,6 +4,8 @@
 }
 body{
     background: linear-gradient(145deg, lightsalmon, lightskyblue);
+    background-repeat: no-repeat;
+    min-height: 100vh;
 }
 #src-btn, .screenshoot{
     position: fixed;
